Refactor and improve code